# samsound

./: .gitignore  CMakeLists.txt
Example/: main.c
cmake/: Example.cmake
include/: pcm.h  samsound.h
include/audio_formats/: wave.h
source/: pcm.c  samsound.c
